--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-firebase/database": "^17.5.0",
+    "@react-native-firebase/firestore": "^17.5.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "axios": "^1.4.0",
+    "firebase": "^9.22.1",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.10.2",
+    "react-native-reanimated": "^3.2.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
